app-code/open-webui/open-webui-postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui-db
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: open-webui-db
  template:
    metadata:
      labels:
        app: open-webui-db
    spec:
      nodeSelector:
        kubernetes.io/hostname: atlantis
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: open-webui-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui-db-svc
  namespace: media
spec:
  selector:
    app: open-webui-db
  ports:
    - port: 5432
      targetPort: 5432
