app-code/open-webui/open-webui-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui-ingress
  namespace: media
spec:
  entryPoints: [web, websecure]
  routes:
    - match: Host(`chat.nexus.link`)
      kind: Rule
      services:
        - name: open-webui-svc
          port: 8080
